--- a/MovieTrakt/res/layout/main.xml
+++ b/MovieTrakt/res/layout/main.xml
@@ -11,10 +11,13 @@
     </LinearLayout>
     <TextView android:text="Trending movies the trakt community is watching right now!" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:background="#ffffff"></TextView>
 
-<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_height="wrap_content">
+<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_height="wrap_content" android:visibility="gone">
     <Gallery android:id="@+id/gall" android:layout_height="wrap_content" android:layout_width="match_parent"></Gallery>
 </LinearLayout>
-<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout2" android:orientation="vertical">
+<LinearLayout  android:background="#333333" android:layout_width="match_parent" android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_height="match_parent">
     <ListView  android:background="#333333" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/trendingList" android:visibility="gone"></ListView>
+    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="match_parent">
+        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true" android:id="@+id/progressBar"></ProgressBar>
+    </RelativeLayout>
 </LinearLayout>
 </LinearLayout>
