--- a/MovieTrakt/res/layout/main.xml
+++ b/MovieTrakt/res/layout/main.xml
@@ -5,11 +5,11 @@
     android:layout_height="fill_parent"
     android:background="#333333"
     >
-    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout3">
-        <ImageView android:id="@+id/imageView1" android:src="@drawable/avatar" android:layout_width="50dp" android:layout_height="50dp"></ImageView>
+    <LinearLayout android:background="@drawable/userbar" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout3">
+        <ImageView android:src="@drawable/avatar" android:layout_width="50dp" android:layout_height="50dp" android:id="@+id/avatar"></ImageView>
         <TextView android:id="@+id/user" android:textSize="23dp" android:text="Username" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
     </LinearLayout>
-    <TextView android:text="Trending movies the trakt community is watching right now!" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:background="#ffffff"></TextView>
+    <TextView android:text="Trending movies" android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/textView1" android:background="#c0bdbd" android:layout_width="match_parent" android:textSize="25dp"></TextView>
 
 <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_height="wrap_content" android:visibility="gone">
     <Gallery android:id="@+id/gall" android:layout_height="wrap_content" android:layout_width="match_parent"></Gallery>
